--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -17,16 +17,12 @@ footer > ul {
   gap: 20px;
 }
 
-footer > ul >li >  a > img {
+footer > ul > li > a > img {
   width: 30px;
   height: 30px;
-  filter: invert(99%) sepia(2%) saturate(7496%) hue-rotate(203deg)
-    brightness(127%) contrast(91%);
-  transition: all 0.5s ease-in-out;
 }
 
 footer > ul > li > a > img:hover {
-  scale: 1.2;
-  filter: invert(16%) sepia(68%) saturate(6910%) hue-rotate(353deg)
-    brightness(88%) contrast(99%);
+  filter: brightness(0) saturate(100%) invert(14%) sepia(96%) saturate(4525%)
+    hue-rotate(353deg) brightness(87%) contrast(99%);
 }
