--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -6,31 +6,20 @@ header {
   align-items: center;
   padding: 20px;
   gap: 20px;
+  background: transparent;
 }
 
 #icon {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
 }
 
 #icon:hover {
   transform: rotate(40deg);
 }
 
-header > ul{
+header > ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: 20px;
-}
-
-header > ul > li> button{
-  background: none;
-  border: none;
-}
-
-header > ul > li > button > img:hover{
-  scale: 1.2;
-  filter: invert(16%) sepia(68%) saturate(6910%) hue-rotate(353deg)
-    brightness(88%) contrast(99%);
 }
