--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
   --red: #dd1215;
   --rich-black: #031926;
   --ghost-white: #f8f7ff;
-  --green: #afff00;
+  --green: #cfef00;
   --spacing: 1rem;
   --border: 2px solid black;
   --body-font: "Outfit", serif;
@@ -42,6 +42,14 @@ body::-webkit-scrollbar-thumb {
   background-color: var(--red);
 }
 
+::-moz-selection {
+  background: var(--red);
+}
+
+::selection {
+  background: var(--red);
+}
+
 h1,
 h2,
 h3 {
@@ -54,6 +62,12 @@ h3 {
 h1 {
   font-size: 2.5rem;
   font-weight: 800;
+  color: var(--ghost-white);
+  -webkit-text-stroke: 2px var(--red);
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 p {
@@ -74,4 +88,29 @@ a {
 
 a:hover {
   color: var(--red);
+}
+
+video {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+pre {
+  font-size: 7px;
+  color: var(--emerald);
+  cursor: pointer;
+  animation: fadeIn 4s ease-in-out;
+}
+
+pre:hover {
+  text-decoration: var(--red) wavy underline;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
