--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -1,28 +1,41 @@
 footer {
   width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+  gap: 10px;
+  background-color: var(--rich-black);
+}
+
+.social-media {
+  width: 100%;
   height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.social-media img {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(25, 0, 255);
+  border-radius: 50%;
+  padding: 8px;
+}
+
+.social-media img:hover {
+  background-color: var(--red);
+}
+
+.legal {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  padding: 20px;
-  gap: 20px;
-}
-
-footer > ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
-}
-
-footer > ul > li > a > img {
-  width: 30px;
-  height: 30px;
-}
-
-footer > ul > li > a > img:hover {
-  filter: brightness(0) saturate(100%) invert(14%) sepia(96%) saturate(4525%)
-    hue-rotate(353deg) brightness(87%) contrast(99%);
+  gap: 10px;
 }
