--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -6,20 +6,33 @@ header {
   align-items: center;
   padding: 20px;
   gap: 20px;
-  background: transparent;
+  position: absolute;
+  z-index: 100;
 }
 
-#icon {
+.icon {
   width: 50px;
   height: 50px;
 }
 
-#icon:hover {
+.icon:hover {
   transform: rotate(40deg);
 }
 
-header > ul {
+.buttons {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.absolute-header {
+  position: absolute;
+}
+
+.relative-header {
+  position: relative;
+}
+
+.background-header {
+  background-color: black;
 }
