--- a/components/Menu/Menu.css
+++ b/components/Menu/Menu.css
@@ -1,6 +1,6 @@
 .hamburger {
-  width: 20px;
-  height: 20px;
+  width: 50px;
+  height: 50px;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   -webkit-transition: -webkit-transform 0.25s
@@ -8,21 +8,25 @@
   transition: transform 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
   z-index: 5;
   cursor: pointer;
-}
-
-.hamburger.is-active {
-  background-color: none;
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 div.hamburger > div {
   background-color: var(--red);
   margin-bottom: 4px;
-  border-radius: 2px;
-  width: 28px;
+  border-radius: 3px;
+  width: 25px;
   height: 4px;
   opacity: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   -webkit-transition: all 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
@@ -37,14 +41,14 @@ div.hamburger > div {
 
 .hamburger:hover .bottom {
   -webkit-transform: translateY(50%);
-  -ms-transform: translateY(100%);
+  -ms-transform: translateY(50%);
   transform: translateY(100%);
 }
 
 .hamburger.is-active .top {
-  -webkit-transform: translateY(200%) rotate(45deg) !important;
-  -ms-transform: translateY(200%) rotate(45deg) !important;
-  transform: translateY(200%) rotate(45deg) !important;
+  -webkit-transform: translateY(200%) rotate(45deg);
+  -ms-transform: translateY(200%) rotate(45deg);
+  transform: translateY(200%) rotate(45deg);
 }
 
 .hamburger.is-active .mid {
@@ -52,30 +56,30 @@ div.hamburger > div {
 }
 
 .hamburger.is-active .bottom {
-  -webkit-transform: translateY(-200%) rotate(135deg) !important;
-  -ms-transform: translateY(-200%) rotate(135deg) !important;
-  transform: translateY(-200%) rotate(135deg) !important;
+  -webkit-transform: translateY(-200%) rotate(135deg);
+  -ms-transform: translateY(-200%) rotate(135deg);
+  transform: translateY(-200%) rotate(135deg);
 }
 
-.menuppal.is_active {
+.menuppal.is-active {
   transform: translate3d(0px, 0px, 0px);
 }
 
 .menuppal {
   width: 100%;
-  height: auto;
+  height: 100vh;
   top: 0;
   left: 0;
   position: fixed;
-  transform: translate3d(0px, -100%, 0px);
-  transition: transform 0.35s cubic-bezier(0.05, 1.04, 0.72, 0.98) 0s;
   z-index: 4;
   background-color: var(--rich-black);
+  transform: translate3d(0px, -100%, 0px);
+  transition: transform 0.35s cubic-bezier(0.05, 1.04, 0.72, 0.98) 0s;
 }
 
-.menuppal > ul {
+.section-links {
   width: 100%;
-  height: 100vh;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -85,11 +89,15 @@ div.hamburger > div {
 
 .menuppal > ul > li {
   width: 100%;
-  height: 100px;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2em;
+  font-size: 1.5em;
   text-transform: uppercase;
   letter-spacing: 2.5px;
+}
+
+.active {
+  text-decoration: lime wavy underline;
 }
