--- a/pages/Contacto/Contacto.css
+++ b/pages/Contacto/Contacto.css
@@ -1,50 +1,38 @@
-.entry {
+.contacto {
   width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: var(--spacing);
-  gap: var(--spacing);
-}
-
-.entry img {
-  width: 50%;
-  height: auto;
-}
-
-.form-information {
-  background-color: var(--dl-color-three);
-  width: 50%;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  gap: var(--small-spacing);
-  padding: var(--small-spacing);
-  border: var(--border-three);
-  box-shadow: var(--box-shadow);
+  padding: 20px;
+  gap: 20px;
+  background-color: aqua;
+  color: black;
 }
 
 form {
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  gap: var(--spacing);
+  padding: 20px;
+  gap: 20px;
+  border: 2px solid salmon;
 }
 
-form > input,
-form > select {
-  font-family: var(--font-three);
-  background-color: var(--dl-color-five);
+form > input {
   width: 100%;
-  height: auto;
-  border: none;
+  height: 40px;
+  background-color: rgb(74, 72, 72);
+  border: 2px dashed blanchedalmond;
 }
 
 form > input[type="submit"] {
-  background-color: var(--dl-color-four);
-  color: var(--dl-color-five);
+  width: 50%;
+  height: 40px;
+  background-color: rgb(74, 72, 72);
+  border: 2px dashed blanchedalmond;
 }
