--- a/pages/Inicio/Inicio.css
+++ b/pages/Inicio/Inicio.css
@@ -1,53 +1,72 @@
 .inicio {
   width: 100%;
-  height: auto;
-  position: relative;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-}
-
-.desktop-video {
-  display: none;
-}
-
-.info {
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 10%;
-  background-color: rgb(255, 255, 255);
-  border-radius: 20px;
-}
-
-.splash {
-  width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #000;
-  z-index: 5;
-  transition: opacity 1s ease-in-out;
 }
 
-.fade-out {
-  opacity: 0;
-  visibility: hidden;
+.info {
+  width: 90%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 15px;
+  padding: 20px;
+  gap: 10px;
+  position: absolute;
+  bottom: 5%;
+  border: 5px solid black;
+  outline: 5px double white;
 }
 
-.hidden {
-  display: none;
+.marker {
+  position: absolute;
+  bottom: 40px;
+  font-family: var(--marker-font);
+  z-index: 1;
 }
 
-.visible {
-  opacity: 1;
-  visibility: visible;
+.line {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  position: relative;
+}
+
+.tour-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tour-name > h3 {
+  font-size: 0.9rem;
+  font-family: var(--other-font);
+}
+
+.tour-name > h3::after {
+  content: "✮";
+  display: inline-block; /* Necesario para aplicar transformaciones */
+  margin-left: 5px; /* Espacio entre el texto y el ícono */
+  margin-right: 5px; /* Espacio entre el texto y el ícono */
+  animation: girar 2s linear infinite; /* Rotación infinita */
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
