--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+
+@font-face {
+  font-family: "Cubenzis";
+  src: url("/fonts/CubenzisRegular.woff2") format("woff2"),
+    url("/fonts/CubenzisRegular.woff") format("woff"),
+    url("/fonts/CubenzisRegular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 :root {
   --dark-slate-gray: #35524aff;
@@ -15,6 +25,8 @@
   --border: 2px solid black;
   --body-font: "Outfit", serif;
   --header-font: "Audiowide", sans-serif;
+  --other-font: "Cubenzis", sans-serif;
+  --marker-font: "Permanent Marker", cursive;
 }
 
 * {
@@ -24,7 +36,6 @@
 }
 
 body {
-  background-color: var(--rich-black);
   color: var(--ghost-white);
   font-family: var(--body-font);
 }
@@ -60,14 +71,18 @@ h3 {
 }
 
 h1 {
-  font-size: 2.5rem;
-  font-weight: 800;
-  color: var(--ghost-white);
-  -webkit-text-stroke: 2px var(--red);
+  font-size: 2rem;
+  font-family: var(--other-font);
 }
 
 h2 {
   font-size: 2rem;
+}
+
+hr {
+  width: 300px;
+  height: 3px;
+  background-color: black;
 }
 
 p {
@@ -92,20 +107,20 @@ a:hover {
 
 video {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 
 pre {
   font-size: 7px;
   color: var(--emerald);
-  cursor: pointer;
   animation: fadeIn 4s ease-in-out;
 }
 
 pre:hover {
   text-decoration: var(--red) wavy underline;
 }
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
