--- a/components/Button/Button.css
+++ b/components/Button/Button.css
@@ -8,10 +8,10 @@
 }
 
 .btn.primary {
-  width: 200px;
+  width: 150px;
   height: 50px;
-  border-radius: 100px;
-  border: none;
+  border: 2px solid black;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
