--- a/pages/Contacto/Contacto.css
+++ b/pages/Contacto/Contacto.css
@@ -7,7 +7,6 @@
   align-items: center;
   padding: 20px;
   gap: 20px;
-  background-color: aqua;
   color: black;
 }
 
@@ -20,19 +19,14 @@ form {
   align-items: center;
   padding: 20px;
   gap: 20px;
-  border: 2px solid salmon;
+  border: 2px solid black;
+  outline: 10px double rgb(66, 2, 2);
 }
 
 form > input {
-  width: 100%;
-  height: 40px;
-  background-color: rgb(74, 72, 72);
-  border: 2px dashed blanchedalmond;
-}
-
-form > input[type="submit"] {
   width: 50%;
-  height: 40px;
-  background-color: rgb(74, 72, 72);
-  border: 2px dashed blanchedalmond;
+  height: 50px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  padding: 10px;
 }
