--- a/pages/Inicio/Inicio.css
+++ b/pages/Inicio/Inicio.css
@@ -70,3 +70,16 @@
     transform: rotate(360deg);
   }
 }
+
+#video-desktop {
+  display: none;
+}
+
+@media screen and (min-width: 769px) {
+  #video-desktop {
+    display: block;
+  }
+  #video-mobile {
+    display: none;
+  }
+}
