--- a/pages/Contacto/Contacto.css
+++ b/pages/Contacto/Contacto.css
@@ -12,21 +12,20 @@
 
 form {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   padding: 20px;
   gap: 20px;
-  border: 2px solid black;
-  outline: 10px double rgb(66, 2, 2);
 }
 
 form > input {
-  width: 50%;
+  width: 100%;
   height: 50px;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 10px;
   padding: 10px;
+  font-family: inherit;
 }
