--- a/pages/Tienda/Tienda.css
+++ b/pages/Tienda/Tienda.css
@@ -23,11 +23,6 @@ article {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-article > a {
-  width: 100%;
-  height: 100%;
   position: relative;
 }
 
@@ -54,9 +49,11 @@ article > h3 {
 .product-container {
   width: 100%;
   height: auto;
+  position: relative;
+  display: inline-block;
 }
 
-.thumbnail {
+.product-thumbnail {
   width: 100%;
   height: auto;
   display: block;
@@ -75,6 +72,7 @@ article > h3 {
   opacity: 0;
   background: rgba(0, 0, 0, 0.4);
   transition: opacity 0.5s ease;
+  pointer-events: none;
 }
 
 .overlay span {
