--- a/pages/Tienda/Tienda.css
+++ b/pages/Tienda/Tienda.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  gap: 20px;
+  padding: var(--spacing);
+  gap: var(--spacing);
 }
 
 .store-container {
@@ -13,7 +13,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: auto;
-  gap: 20px;
+  gap: var(--spacing);
 }
 
 article {
@@ -41,7 +41,7 @@ article > h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: var(--small-spacing);
   padding: 5px;
   position: absolute;
 }
