Modificado index.html

--- a/components/ProductModal/ProductModal.css
+++ b/components/ProductModal/ProductModal.css
@@ -62,12 +62,12 @@
 }
 
 .notification {
+  color: var(--ghost-white);
   position: fixed;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #28a745;
-  color: white;
+  background-color: green;
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 1.2em;
