--- a/pages/Cesta/Cesta.css
+++ b/pages/Cesta/Cesta.css
@@ -1,6 +1,6 @@
 .cesta {
   width: 100%;
-  min-height: 80vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -9,26 +9,83 @@
   gap: var(--spacing);
 }
 
-.cesta > ul {
-  width: 100%;
-  height: auto;
+.cesta > article {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: stretch;
-  gap: var(--small-spacing);
+  align-items: center;
+  text-align: center;
+  background-color: antiquewhite;
 }
 
-.cesta > ul > li {
+.cesta > article > div {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: var(--small-spacing);
-  border: 2px solid black;
-  text-align: center;
+  gap: 10px;
 }
 
 .product-cover {
   width: 50%;
   height: auto;
+  background-color: aqua;
+}
+
+/*CARRITO VACÍO*/
+
+.empty-shopping-cart {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: aqua;
+}
+
+.empty-shopping-cart > img {
+  width: 100%;
+  height: 10%;
+  position: relative;
+  object-fit: cover;
+}
+
+.empty-shopping-cart > a {
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  clip-path: polygon(
+    100% 50%,
+    87.05% 58.46%,
+    95.05% 71.69%,
+    79.71% 73.69%,
+    81.17% 89.09%,
+    66.49% 84.24%,
+    61.13% 98.75%,
+    50% 88%,
+    38.87% 98.75%,
+    33.51% 84.24%,
+    18.83% 89.09%,
+    20.29% 73.69%,
+    4.95% 71.69%,
+    12.95% 58.46%,
+    0% 50%,
+    12.95% 41.54%,
+    4.95% 28.31%,
+    20.29% 26.31%,
+    18.83% 10.91%,
+    33.51% 15.76%,
+    38.87% 1.25%,
+    50% 12%,
+    61.13% 1.25%,
+    66.49% 15.76%,
+    81.17% 10.91%,
+    79.71% 26.31%,
+    95.05% 28.31%,
+    87.05% 41.54%
+  );
 }
