--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -26,6 +26,7 @@ footer {
   background-color: var(--slate-gray);
   border-radius: 50%;
   padding: 8px;
+  transition: all 0.5s ease-in-out;
 }
 
 .social-media img:hover {
