--- a/components/Chip/Chip.css
+++ b/components/Chip/Chip.css
@@ -2,8 +2,8 @@
   display: inline-block;
   padding: 8px;
   font-weight: 700;
-  color: rgb(252, 252, 252);
-  border-radius: 10px;
+  color: var(--ghost-white);
+  border-radius: var(--border-radius);
   vertical-align: baseline;
   text-align: center;
   line-height: 1;
@@ -12,7 +12,7 @@
 }
 
 .chip.red {
-  background-color: red;
+  background-color: var(--red);
 }
 
 .chip.green {
