--- a/components/ProductModal/ProductModal.css
+++ b/components/ProductModal/ProductModal.css
@@ -1,13 +1,12 @@
 .modal-overlay {
   display: block;
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.7);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
@@ -17,14 +16,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  padding: 20px;
-  gap: 20px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10000;
+  padding: var(--spacing);
+  gap: var(--spacing);
   color: var(--ghost-white);
+  text-align: center;
 }
 
 .product-name {
@@ -36,43 +31,42 @@
 
 .product-price {
   width: 100%;
-  text-align: center;
-  font-weight: 700;
-  letter-spacing: 4px;
+  height: auto;
+  font-weight: 500;
+  letter-spacing: 3px;
 }
 
 .product-description {
-  text-align: center;
-}
-
-.modal-content select,
-.modal-content input {
   width: 100%;
-  height: 50px;
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 10px;
-  padding: 10px;
-  font-family: inherit;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: var(--spacing);
+  text-align: justify;
 }
 
 .modal-content label {
   width: 100%;
   height: auto;
-  text-align: center;
 }
 
 .notification {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: green;
   color: var(--ghost-white);
   position: fixed;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: green;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 1.2em;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  opacity: 0;
+  padding: var(--small-spacing);
+  border-radius: var(--border-radius);
   animation: showNotification 5s forwards;
 }
 
