--- a/pages/Cesta/Cesta.css
+++ b/pages/Cesta/Cesta.css
@@ -9,55 +9,111 @@
   gap: var(--spacing);
 }
 
-.cesta > article {
+.ticket {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  background-color: antiquewhite;
+  padding: var(--spacing);
+  gap: var(--spacing);
+  border-radius: var(--border-radius);
+  border: 2px dashed var(--rich-black);
+  background: url("https://res.cloudinary.com/darvwfw0u/image/upload/v1743521388/ticket-bg_cvvmuz.jpg");
+  font-family: var(--ubuntu-font);
+  text-transform: uppercase;
 }
 
-.cesta > article > div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.product-cover {
-  width: 50%;
+.ticket > h3 {
+  width: 100%;
   height: auto;
-  background-color: aqua;
+  font-family: var(--cubenzis-font);
+  color: var(--rich-black);
 }
 
-/*CARRITO VACÍO*/
+.date-time {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--spacing);
+  border-bottom: 5px dotted var(--red);
+}
+
+.cesta > .ticket > article {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cart-product-name {
+  width: 80%;
+}
+
+.cart-product-quantity {
+  width: 10%;
+}
+
+.cart-product-price-quantity {
+  width: 10%;
+}
+
+.cart-thanks {
+  width: 100%;
+  height: auto;
+  border-top: 5px dotted var(--red);
+}
+
+.cart-thanks::after {
+  content: "龍";
+  margin-left: 5px;
+}
+
+.cart-total-price {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 5px dotted var(--red);
+}
+
+.cart-total-price > p:nth-child(1) {
+  width: 90%;
+}
+
+.cart-total-price > p:nth-child(2) {
+  width: 10%;
+}
 
 .empty-shopping-cart {
-  width: auto;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: aqua;
 }
 
 .empty-shopping-cart > img {
-  width: 100%;
-  height: 10%;
-  position: relative;
+  width: 250px;
+  height: auto;
   object-fit: cover;
+  position: relative;
 }
 
 .empty-shopping-cart > a {
-  padding: 40px;
+  font-size: 15px;
+  position: absolute;
+  padding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  background-color: rgb(0, 0, 0);
+  background-color: var(--rich-black);
   clip-path: polygon(
     100% 50%,
     87.05% 58.46%,
