--- a/pages/Musica/Musica.css
+++ b/pages/Musica/Musica.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    gap: 20px;
+    padding: var(--spacing);
+    gap: var(--spacing);
   }
   
   .music-container {
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: auto;
-    gap: 20px;
+    gap: var(--spacing);
   }
   
   article {
@@ -41,7 +41,7 @@
     align-items: center;
   }
   
-  .video-info {
+  .music-info {
     top: 0;
     right: 0;
     display: flex;
@@ -52,7 +52,7 @@
     position: absolute;
   }
   
-  .thumbnail-container {
+  .album-cover-container {
     width: 100%;
     height: auto;
   }
@@ -83,10 +83,10 @@
     height: 40px;
   }
   
-  .thumbnail-container:hover .thumbnail {
+  .album-cover-container:hover .thumbnail {
     filter: grayscale(60%);
   }
   
-  .thumbnail-container:hover .overlay {
+  .album-cover-container:hover .overlay {
     opacity: 1;
   }
