--- a/pages/NoEncontrada/NoEncontrada.css
+++ b/pages/NoEncontrada/NoEncontrada.css
@@ -1,6 +1,6 @@
 canvas {
   width: 100%;
   height: 100%;
-  background: url("https://i.pinimg.com/originals/6d/79/14/6d7914373c8795b89aa4093f9185d344.gif");
+  background: url("https://res.cloudinary.com/darvwfw0u/image/upload/v1743522206/canvas-bg_frucl7.gif");
   background-size: cover;
 }
