--- a/pages/Usuario/Usuario.css
+++ b/pages/Usuario/Usuario.css
@@ -9,3 +9,18 @@
   gap: var(--spacing);
   text-align: center;
 }
+
+#register-form, #login-form {
+  border: 2px dashed var(--red);
+  border-radius: 10px;
+  padding: 1.25rem;
+  position: relative;
+}
+
+#register-form > h3, #login-form > h3 {
+  position: absolute;
+  top: -10px;
+  left: 10px;
+  padding: 0 10px;
+  background-color: var(--ghost-white);
+}
