--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 @font-face {
   font-family: "Cubenzis";
@@ -25,6 +26,7 @@
   --audiowide-font: "Audiowide", sans-serif;
   --cubenzis-font: "Cubenzis", sans-serif;
   --marker-font: "Permanent Marker", cursive;
+  --ubuntu-font: "Ubuntu Mono", monospace;
 }
 
 * {
@@ -36,6 +38,7 @@
 body {
   color: var(--rich-black);
   font-family: var(--outfit-font);
+  background-color: var(--ghost-white);
 }
 
 body::-webkit-scrollbar {
@@ -145,7 +148,9 @@ form {
 }
 
 form > input,
-textarea {
+textarea,
+select,
+input[type="number"] {
   width: 100%;
   height: 50px;
   border: 2px solid var(--rich-black);
@@ -161,7 +166,9 @@ textarea {
 
 @media screen and (min-width: 768px) {
   form > input,
-  textarea {
+  textarea,
+  select,
+  input[type="number"] {
     width: 50%;
   }
 }
